kube/filter-service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filter-service
  labels:
    app: filterApi
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filterApi
      tier: backend
  template:
    metadata:
      labels:
        app: filterApi
        tier: backend
    spec:
      containers:
      - name: filterservice
        image: filter-service
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 3001
