kube/mongo-serv.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: productApi1
    tier: db
  name: product-service-mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: productApi1
    tier: db
