kube/product-service-serv.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: productApi
    tier: backend
spec:
  selector:
    app: productApi
    tier: backend
  type: ClusterIP
  ports:
    - port: 5000
      targetPort : 3002
      nodePort: 31110
