kube/vue-serv.yml
apiVersion: v1
kind: Service
metadata:
  name: front-end-app
  labels:
    app: frontend-app
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend-app
    tier: frontend
  ports:
  - port: 80
    targetPort: 80
