kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-proj
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: my-proj.local
    http:
      paths:
      - path: /front-end-app
        pathType: Prefix
        backend:
          service:
            name: front-end-app
            port:
              name: http
      - path: /product-service
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              name: http
      - path: /comment-service
        pathType: Prefix
        backend:
          service:
            name: comment-service
            port:
              name: http
      - path: /filter-service
        pathType: Prefix
        backend:
          service:
            name: filter-service
            port:
              name: http
